--- a/priv/index.html
+++ b/priv/index.html
@@ -12,7 +12,25 @@
     </h1>
     <b>Some heading here</b>
 
-    <div id="main" class="grid grid-cols-4 gap-1 justify-evenly">
+    <div>
+      <p>
+      HTMX gives you access to create dynamic applications without having to learn all the nastyness
+      and complication that comes with modern javascript.  Couple this with the BEAM alien technology
+      of Lisp Flavored erlang, and you have a combinion that can't be stopped.
+      </p>
+
+      <p>
+      When talking to a web server, there are a number of "HTTP" verbs, (GET PUT POST PATCH DELETE, ETC)
+      that have been only available to AJAX requests, We the people say NO MORE ! We want the these
+      verbs to be used by the hypermedia itself, connecting the verbs directly to HTML elements.
+      </p>
+
+      <p>
+      This may seem a bit strange, how can you have this kind of power !?
+      </p>
+    </div>
+
+    <div id="main" class="">
         <div class="bg-gray-300 w-32 h-12">Lesson 1</div>
         <div class="bg-gray-300 w-32 h-12">Lesson 2</div>
         <div class="bg-gray-300 w-32 h-12">Lesson 3</div>
