--- a/priv/index.html
+++ b/priv/index.html
@@ -2,40 +2,104 @@
 <html>
 <head>
     <title>Tank Bison with lazer eyes.</title>
+    <meta charset="UTF-8">
     <link href= "https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css"
           rel="stylesheet">
+    <script src="https://unpkg.com/htmx.org@1.9.6"></script>
+
+    <style>
+      html {
+          max-width: 70ch;
+          padding: 3em 1em;
+          margin: auto;
+          line-height: 1.75;
+          font-size: 1.25em;
+      }
+    </style>
 </head>
 
-<body class="text-center">
+<body class="">
     <h1 class="text-black-600 text-5xl font-bold">
       Tank Bison with lazer eyes.
     </h1>
-    <b>Some heading here</b>
+    <b>Why backend is the new frontend.</b>
 
-    <div>
-      <p>
+    <div class="py-5">
+      <p class="py-5">
       HTMX gives you access to create dynamic applications without having to learn all the nastyness
       and complication that comes with modern javascript.  Couple this with the BEAM alien technology
       of Lisp Flavored erlang, and you have a combinion that can't be stopped.
       </p>
 
-      <p>
-      When talking to a web server, there are a number of "HTTP" verbs, (GET PUT POST PATCH DELETE, ETC)
-      that have been only available to AJAX requests, We the people say NO MORE ! We want the these
-      verbs to be used by the hypermedia itself, connecting the verbs directly to HTML elements.
+
+      <p class="py-5">
+        Before you dive down this rabbit hole, I start with a quote from Morpheus:
       </p>
 
-      <p>
-      This may seem a bit strange, how can you have this kind of power !?
-      </p>
-    </div>
+        <div class="pl-10 underline decoration-pink-500 py-5">
+          You have to understand. Most people are not ready to be unplugged. And many of them are so inured and
+          so hopelessly dependent on the system that they will fight to protect it.
+        </div>
 
-    <div id="main" class="">
-        <div class="bg-gray-300 w-32 h-12">Lesson 1</div>
-        <div class="bg-gray-300 w-32 h-12">Lesson 2</div>
-        <div class="bg-gray-300 w-32 h-12">Lesson 3</div>
-        <div class="bg-gray-300 w-32 h-12">Lesson 4</div>
-    </div>
+      <p class="py-5">
+        Individuals can become defensive when a new technology obsoletes or challenges a thought where they have invested time money or energy. There is a natural resistance to change, people are comfortable with what they know. Fear of the unknown can make individuals defensive, overwhelmed or uncertain. Investing significant time, money, or effort into  technology can make them defensive and reluctance to embrace the advantages of the new, despite its potential benefits.
+      </p>
+
+      <p class="py-5">
+        I dont want to debate the merits of frameworks, I do however want to introduce how simple and elengant
+        this library is, and how so much can be done without writing javascript.
+      </p>
+
+      <b>Whats the big deal ?</b>
+
+      <p class="py-5">
+      When your browser talks to to a web server, it uses one of "HTTP" verbs,
+      (GET PUT POST PATCH DELETE, ETC).  The HTML standard (even HTML 5) limits the browser
+      to JSON being allowed to make these requests.
+      <p>
+
+      <p class="py-5">
+      When you think about it, there isnt a good reason for HTML to not support these extended verbs,
+
+      We the people say NO MORE ! We want the these verbs to be used by the hypermedia itself,
+      connecting the verbs directly to HTML elements.
+      </p>
+
+      <p class="py-5">
+      This may seem a bit foreign the first time you encounter this, how can you have this kind of power.
+      Who would I want this ? Buckle up because its a bumpy ride.
+      </p>
+
+      <br>
+
+
+      <div class="py-5">
+
+        <b class="py-5">Motiviation</b>
+
+        <ol class="py-5 list-disc">
+          <li>Why should only a and form be able to make HTTP requests?</li>
+          <li>Why should only click & submit events trigger them?</li>
+          <li>Why should only GET & POST methods be available?</li>
+          <li>Why should you only be able to replace the entire screen?</li>
+        </ol>
+      </div>
+
+      <p class="py-5">
+      By removing these arbitrary constraints, htmx completes HTML as hypertext.
+      </p>
+
+      <p class="py-5">
+      Why does this matter ? Because almost all of the actions you want to do from the
+      web client to the server are http verbs, previous locked up behind javascript and json.
+      </p>
+
+      <p class="py-5 text-9xl">
+        <a href="/chapter1" hx-boost="true">Next Chapter →</a>
+      </p>
+
+
+
+</div>
 </body>
-
 </html>
