Fix up basic formatting, make code exampel work.

--- a/priv/index.html
+++ b/priv/index.html
@@ -95,7 +95,7 @@
       </p>
 
       <p class="py-5 text-9xl">
-        <a href="/chapter1" hx-boost="true">Next Chapter →</a>
+        || <a href="/chapter1" hx-boost="true">Next Chapter →</a>
       </p>
 
 
