Add run instructions.

--- a/priv/index.html
+++ b/priv/index.html
@@ -53,6 +53,10 @@
       of Lisp Flavored erlang, and you have a combinion that can't be stopped.
       </p>
 
+      <p>
+        This tutorial expects you to have basic understanding of HTML, <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods"> http verbse </a> and have have equivalent understanding of a LFE novice (something like <a href="https://cnbbooks.github.io/lfe-manual/current/part1/intro/index.html"> this </a>)
+      </p>
+
 
       <p class="py-5">
         Before you dive down this rabbit hole, I start with a quote from Morpheus:
