--- a/priv/index.html
+++ b/priv/index.html
@@ -4,57 +4,60 @@
     <title>Tank Bison with lazer eyes.</title>
     <meta charset="UTF-8">
     <script src="https://unpkg.com/htmx.org@1.9.6"></script>
+  <style>
+    html {
+        max-width: 80ch;
+        padding: 3em 1em;
+        margin: auto;
+        line-height: 1.75;
+        font-size: 1.25em;
+        background-color: rgb( 0 70 67);
+        color: rgb(171 209 198);
+        font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+        line-height: 1.5;
+    }
 
-    <style>
-      html {
-          max-width: 80ch;
-          padding: 3em 1em;
-          margin: auto;
-          line-height: 1.75;
-          font-size: 1.25em;
-          background-color: rgb( 0 70 67);
-          color: rgb(171 209 198);
-          font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-          line-height: 1.5;
-      }
+    button {
+        background-color: #f9bc60;
+        color: #001e1d;
+        border-radius: 44px;
+        width: 10rem;
+        height: 4rem;
+        font-size: 1rem; /* 16px */
+        padding: 20px;
+    }
 
-      button {
-          background-color: #f9bc60;
-          color: #001e1d;
-          border-radius: 24px;
-          width: 10rem;
-          height: 4rem;
-          font-size: 1rem; /* 16px */
-      }
+    a {
+        color: #FFFFFF;
+    }
 
-      a {
-          color: #FFFFFF;
-      }
+    p {
+        padding-left: 1.25rem; /* 20px */
+        padding-right: 1.25rem; /* 20px */
+        padding-top: 1.25rem;
+    }
 
-      p {
-          padding-left: 1.25rem; /* 20px */
-          padding-right: 1.25rem; /* 20px */
-      }
+    div {
+        padding-left: 1.25rem; /* 20px */
+        padding-right: 1.25rem; /* 20px */
+        padding-top: 1.25rem; /* 20px */
+    }
 
-      .center {
-          margin: auto;
-          width: 50%;
-          padding: 10px;
-      }
+    pre {
+        background-color: #BDB76B;
+        color: #001e1d;
+    }
 
-      table, th, td {
-          border-left: 40px;
-          padding: 5px;
-          border: 1px solid white;
-      }
+    /* Do this because otherwise i can't see the highlighting */
+    pre::selection {
+        /* Change highlight background color to black */
+        background: #000;
+        /* Change highlight text color to red */
+        color: #ff0000;
+    }
 
+  </style>
 
-      div.reallybig {
-          font-size: 126px;
-          color: rgb(255,255,102);
-      }
-
-    </style>
 
 </head>
 
@@ -97,7 +100,7 @@
       </p>
 
       <p class="py-5">
-        Individuals can become defensive when a new technology obsoletes or challenges a thought where they have invested time money or energy. There is a natural resistance to change, people are comfortable with what they know. Fear of the unknown can make individuals defensive, overwhelmed or uncertain. Investing significant time, money, or effort into  technology can make them defensive and reluctance to embrace the advantages of the new, despite its potential benefits.
+        Individuals can become defensive when a new technology obsoletes or challenges a thought where they have invested time money or energy. There is a natural resistance to change, people are comfortable with what they know. Fear of the unknown can make individuals defensive, overwhelmed or uncertain. Investing significant time, money, or effort into  technology can make them defensive and reluctance to embrace the advantages of the new, despite its potential benefits.  <a href="https://matt.sh/htmx-is-a-erlang"> Matt.sh</a> has some examples on his site that may be enlightening.
       </p>
 
       <p class="py-5">
