Add Q: and A: in about page.

--- a/priv/about.html
+++ b/priv/about.html
@@ -69,10 +69,10 @@
 
     <div>
 
-	<h2> Whats with the name </h2>
+	<h2>Q: Whats with the name </h2>
 
 	<p> 
-	The name comes from a discussion on twitter with the  <a href="https://twitter.com/htmx_org"> HTMX twitter account </a>	 </p>
+	A: The name comes from a discussion on twitter with the  <a href="https://twitter.com/htmx_org"> HTMX twitter account </a>	 </p>
 	
 	<img src="https://i.imgur.com/7gXYDD9.png"> 
 
@@ -82,10 +82,10 @@
 
 	<img src="https://i.imgur.com/gI1cfdd.png">
 
-        <h2>What if I need advanced interaction that HTMX can't do?</h2>
+        <h2>Q: What if I need advanced interaction that HTMX can't do?</h2>
 
         <p>
-          I strongly reccomend you look into <a href="https://hyperscript.org/"> Hyperscript </a> as an
+          A: I strongly reccomend you look into <a href="https://hyperscript.org/"> Hyperscript </a> as an
           alternative to javascript.  You absolutely can still use javascript, I'm not your mum.
 
         </p>
@@ -94,10 +94,10 @@
           Hyperscript probably can't do everything, but it is still neat.
         </p>
 
-        <h2>I found a bug, where should i report it ?</h2>
+        <h2>Q: I found a bug, where should i report it ?</h2>
 
         <p>
-          Please report it on the <a href="https://github.com/spawnfest/UntitledProject/issues"> issues </a>
+          A: Please report it on the <a href="https://github.com/spawnfest/UntitledProject/issues"> issues </a>
           for the project.
         </p>
 
@@ -106,6 +106,8 @@
         <p>
           At this time, I'm only accepting features in LISP FLAVOURED ERLANG.
         </p>
+
+        <img src="https://i.imgur.com/rOn2VUi.png" />
 
 </div>
 </body>
