--- a/priv/index.html
+++ b/priv/index.html
@@ -10,8 +10,8 @@
         padding: 3em 1em;
         margin: auto;
         line-height: 1.75;
-        font-size: 1.25em;
         background-color: rgb( 0 70 67);
+        font-size: 1.25em;
         color: rgb(171 209 198);
         font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
         line-height: 1.5;
@@ -54,6 +54,11 @@
         background: #000;
         /* Change highlight text color to red */
         color: #ff0000;
+    }
+
+    div.reallybig {
+	color: 	#FFD700;
+        font-size: 3rem; /* 16px */
     }
 
   </style>
@@ -196,6 +201,9 @@
         || <a href="/chapter1" hx-boost="true">Next Chapter →</a>
       </p>
 
+      	<p>
+	<a href="/about"> About This Project </a> 
+	</p>
 </div>
 </body>
 </html>
