Handle saving and compiling the uploaded user code.

--- a/priv/live.html
+++ b/priv/live.html
@@ -122,7 +122,7 @@
       </p>
       
       <p>
-        <button class="wide-button" hx-get="/livetest"> Test this code </button>
+        <a href="/go"> Test this code </a>
       </p>
 
 </div>
