--- a/priv/live.html
+++ b/priv/live.html
@@ -125,6 +125,9 @@
         <a href="/go"> Test this code </a>
       </p>
 
+        <p>
+        <a href="/about"> About This Project </a>
+        </p>
 </div>
 </body>
 </html>
